--- a/src/components/FeatureTile/feature-tile.scss
+++ b/src/components/FeatureTile/feature-tile.scss
@@ -67,3 +67,44 @@ a.feature-tile:hover .feature-tile__info {
   @include type-style('heading-03');
   color: $ibm-colors__gray-10;
 }
+
+a.feature-tile.feature-tile--mobile {
+  display: block;
+  // max-height: 400px;
+
+
+
+  @include breakpoint('md') {
+    display: none;
+  }
+}
+
+a.feature-tile.feature-tile--desktop {
+  display: none;
+  @include breakpoint('md') {
+    display: block;
+  }
+}
+
+div.feature-tile--margin.feature-tile--mobile,
+div.feature-tile--mobile {
+  margin-bottom: 1.5rem;
+
+  @include breakpoint('md') {
+    margin-bottom: 0;
+  }
+}
+
+div.feature-tile--margin.feature-tile--desktop,
+div.feature-tile--desktop
+ {
+  margin-bottom: 0;
+
+  @include breakpoint('md') {
+    margin-bottom: 1.5rem;
+
+    & > .ibm--col-lg-12 {
+      padding: 0;
+    }
+  }
+}
